--- a/main/.tmux.conf
+++ b/main/.tmux.conf
@@ -4,7 +4,7 @@
 #   -t -- tmux new -A -s main
 #
 # Reload tmux config:
-#   C-a r
+#   C-a r, or
 #   C-a R
 #
 # Plugin management:
@@ -12,19 +12,29 @@
 #   Update all plug-ins: C-a U
 #   Uninstall old plug-ins: C-a Alt-u
 #
+# Hierarchy and terminology.
+#   Session (C-a s)
+#   \- Window (C-a w)
+#    \- Pane (C-a q)
+#
+# List all commands::
+#   :list-commands
+#
+# List all keybindings:
+#   C-a ?
+#   :list-keys
+#
 # Show option value:
-#   show-options -g -s <name>
+#   :show-options -g -s <name>
 #
 # Prefix is C-a.
 
 # Set up tmux plug-in manager
 set -g @plugin 'tmux-plugins/tpm'
 
-# Set sensible defaults for tmux
-set -g @plugin 'tmux-plugins/tmux-sensible'
-
 # Copycat plugin
 #   C-a / to trigger search
+#   C-a C-f to copy a file
 #   C-a C-u to copy an URL
 set -g @plugin 'tmux-plugins/tmux-copycat'
 
@@ -42,13 +52,20 @@ set -g @plugin 'tmux-plugins/tmux-fpp'
 
 # Prefix key
 set -g prefix C-a
+unbind C-b
 
-# C-a a goes to beginning of line.
-#   C-a C-a ditto.
+# C-a a and C-a C-a both go to beginning of line.
 bind a send-prefix
 
-# Do not change window name automatically once it is manually set
-set -g allow-rename off
+# Go to last window, like GNU Screen.
+bind C-a last-window
+
+# Set vi mode keybindings. Mostly intended for copy mode.
+set -g mode-keys vi
+
+# Use v in addition to SPC to begin copy-mode selection.
+bind-key -T copy-mode-vi v send-keys -X begin-selection
+bind-key -T copy-mode-vi y send-keys -X copy-pipe-and-cancel
 
 # Start to count from 1 just like tiling window managers
 set -g base-index 1
@@ -57,22 +74,35 @@ setw -g pane-base-index 1
 # Set $TERM and force 256 colors.
 set -g default-terminal "tmux-256color"
 
-# Set vi mode keybindings for copy mode.
-set -g mode-keys vi
-
 # Enable mouse mode
 #   C-a m to toggle
 set -g mouse on
 bind m set -g mouse
 
+# Do not change window name automatically once it is manually set
+set -g allow-rename off
+
+# Resize to smallest possible or smallest session size
+setw -g aggressive-resize on
+
+# Increase scrollback buffer size
+set -g history-limit 50000
+
+# Emacs key bindings in tmux command prompt (C-a + :) are better than vi keys, even for vim users
+set -g status-keys emacs
+
 # Renumber windows sequentially after closing any of them.
 set -g renumber-windows on
+
+# Set WM window title string.
+set -g set-titles on
+set -g set-titles-string "#H tmux:#S:#I #W" # hostname tmux:session:window program
 
 # User-friendly shortcuts to split windows, split windows on current path.
 bind - split-window -v -c "#{pane_current_path}"
 bind | split-window -h -c "#{pane_current_path}"
 
-# Set vi mode keys for changing windows.
+# Set vi keys for changing windows.
 bind h select-pane -L
 bind j select-pane -D
 bind k select-pane -U
@@ -81,7 +111,7 @@ bind l select-pane -R
 # Kill a pane a la GNU screen. Confirm before killing.
 bind K confirm kill-pane
 
-# Reload tmux config file
+# Reload tmux config.
 bind r source ~/.tmux.conf \; display "Sourced .tmux.conf!"
 
 # Do not suspend-client
@@ -109,9 +139,6 @@ setw -g window-status-current-style fg=white,bg=default,bright
 
 # Make active pane more distinct.
 set -g pane-active-border-style fg=yellow,bg=default
-
-# Set WM window title string.
-set -g set-titles-string "tmux:#I:#W"
 
 # Set bell style.
 set -g window-status-bell-style fg=red,bg=default,bright
