simplify shell profiles

--- a/main/.config/alacritty/alacritty.yml
+++ b/main/.config/alacritty/alacritty.yml
@@ -6,7 +6,7 @@ font:
   normal:
     family: Hermit
 
-# /base16/monokai.dark from https://terminal.sexy/
+# Theme: /base16/monokai.dark from https://terminal.love/
 colors:
   # Default colors
   primary:
