--- a/main/.ssh/config
+++ b/main/.ssh/config
@@ -17,8 +17,4 @@ Host *
 	# Keep-alive. The default is 0, indicating that these messages will not be sent to the server.
 	ServerAliveInterval 300
 
-# https://wiki.archlinux.org/index.php/Arch_User_Repository
-Host aur
-	HostName aur.archlinux.org
-	IdentityFile ~/.ssh/id_aur
-	User aur
+Include config.d/*
