--- a/main/.tmux.conf
+++ b/main/.tmux.conf
@@ -88,6 +88,9 @@ setw -g aggressive-resize on
 # Increase scrollback buffer size
 set -g history-limit 50000
 
+# Display tmux messages for 4 seconds.
+set -g display-time 4000
+
 # Emacs key bindings in tmux command prompt (C-a + :) are better than vi keys, even for vim users
 set -g status-keys emacs
 
@@ -113,6 +116,10 @@ bind K confirm kill-pane
 
 # Reload tmux config.
 bind r source ~/.tmux.conf \; display "Sourced .tmux.conf!"
+bind R source ~/.tmux.conf \; display "Sourced .tmux.conf!"
+
+# Change default start directory.
+bind _ attach -c '#{pane_current_path}' \; display "Start directory changed to #{pane_current_path}."
 
 # Do not suspend-client
 unbind C-z
