--- a/main/.ssh/config
+++ b/main/.ssh/config
@@ -8,7 +8,7 @@ AddKeysToAgent yes
 Host *
 	# Reuse SSH connection to speed up remote login process using multiplexing
 	ControlMaster auto
-	ControlPath /tmp/ssh-%r@%h:%p
+	ControlPath /tmp/ssh-%C
 	ControlPersist yes
 
 	# Requests compression of all data
