--- a/main/.tmux.conf
+++ b/main/.tmux.conf
@@ -88,8 +88,11 @@ setw -g aggressive-resize on
 # Increase scrollback buffer size
 set -g history-limit 50000
 
-# Display tmux messages for 4 seconds.
-set -g display-time 4000
+# Display tmux messages for 3 seconds.
+set -g display-time 3000
+
+# Just send ESC.
+set -g escape-time 0
 
 # Emacs key bindings in tmux command prompt (C-a + :) are better than vi keys, even for vim users
 set -g status-keys emacs
