add autotrash systemd unit files

--- a/main/.ssh/config
+++ b/main/.ssh/config
@@ -17,4 +17,6 @@ Host *
 	# Keep-alive. The default is 0, indicating that these messages will not be sent to the server.
 	ServerAliveInterval 300
 
+# Load user scripts and functions if existing. Order is important.
+# Corp config is handled as part of .config.d.
 Include config.d/*
