automatically sign-off when running format-patch in git

--- a/main/.gitconfig
+++ b/main/.gitconfig
@@ -56,6 +56,10 @@
 [fetch]
 	prune = true
 
+[format]
+	# Automatically sign-off patches when using format-patch.
+	signoff = true
+
 [help]
 	autocorrect = 1
 
