--- a/main/.tmux.conf
+++ b/main/.tmux.conf
@@ -1,4 +1,5 @@
 # Config file for tmux(1).
+# https://github.com/tmux/tmux/wiki/FAQ
 #
 # Tmux initialization with SSH:
 #   -t -- tmux new -A -s main
@@ -17,7 +18,7 @@
 #   \- Window (C-a w)
 #    \- Pane (C-a q)
 #
-# List all commands::
+# List all commands:
 #   :list-commands
 #
 # List all keybindings:
