--- a/archived/.screenrc
+++ b/archived/.screenrc
@@ -1,3 +1,14 @@
+# Config file for GNU screen(1).
+#
+# Reload screen config:
+#   C-a r, or
+#   C-a R
+#
+# List all keybindings:
+#   C-a ?
+#
+# Prefix is C-a.
+
 # don't display lengthy license and version information on startup
 startup_message off
 
@@ -12,6 +23,9 @@ defutf8 on
 
 # erase background with current bg color
 defbce on
+
+# fix residual text (vim, nano), enable alternative screen
+altscreen on
 
 # status
 hardstatus alwayslastline '%{= kG}%S: %{c}%{= kG}|%= %{= kw}%?%-Lw%?%{r}(%{W}%n*%f%t%?(%u)%?%{r})%{w}%?%+Lw%?%?%= %{g}'
@@ -29,9 +43,6 @@ mousetrack on
 # cyan background, black foreground
 rendition so = ck
 
-# fix residual text (vim, nano), enable alternative screen
-altscreen on
-
 # split focus
 bind o focus next
 bind S eval 'split' 'focus down' 'screen'
@@ -43,6 +54,7 @@ bind "^K" kill
 
 # reload configuration file
 bind r source ~/.screenrc
+bind R source ~/.screenrc
 
 # disable C-a s, which freezes the screen
 # alternatively could be resolved with C-a q
@@ -57,6 +69,10 @@ bindkey "^A^[OA" focus up
 bindkey "^A^[OB" focus down
 bindkey "^A^[OD" focus left
 bindkey "^A^[OC" focus right
+
+# Enable true (24-bit) colors instead of 256 colors (8-bit) if supported.
+# Supported on GNU Screen v5 onwards.
+truecolor on
 
 # load corp configs if any
 source ~/.screenrc_corp
