move ssh multiplexing to ~/.ssh/controlmasters

--- a/main/.ssh/config
+++ b/main/.ssh/config
@@ -8,8 +8,8 @@ AddKeysToAgent yes
 Host *
 	# Reuse SSH connection to speed up remote login process using multiplexing
 	# https://en.wikibooks.org/wiki/OpenSSH/Cookbook/Multiplexing
+	ControlPath ~/.ssh/controlmasters/%C
 	ControlMaster auto
-	ControlPath /tmp/ssh-%C
 	ControlPersist yes
 
 	# Requests compression of all data
