vim: add fzf, use TERM instead of t_Co

--- a/main/.config/i3/config
+++ b/main/.config/i3/config
@@ -161,7 +161,7 @@ bar {
         strip_workspace_numbers no
         mode dock
         modifier $mod
-        font pango:Hermit 9
+        font pango:PT Mono 9
 # $i3-theme-bar
 }
 
