update tmux terminal title

--- a/main/.tmux.conf
+++ b/main/.tmux.conf
@@ -103,7 +103,7 @@ set -g renumber-windows on
 
 # Set WM window title string.
 set -g set-titles on
-set -g set-titles-string "#H tmux:#S:#I #W" # hostname tmux:session:window program
+set -g set-titles-string "#H #S #I:#W" # hostname session window:program
 
 # User-friendly shortcuts to split windows, split windows on current path.
 bind - split-window -v -c "#{pane_current_path}"
