tmux: make it compatible with raspberry pi OS

--- a/main/.tmux.conf
+++ b/main/.tmux.conf
@@ -75,9 +75,8 @@ setw -g pane-base-index 1
 # Set $TERM and force 256 colors.
 # https://github.com/tmux/tmux/wiki/FAQ#how-do-i-use-a-256-colour-terminal
 # https://github.com/tmux/tmux/wiki/FAQ#how-do-i-use-rgb-colour
-if "[[ $TERM =~ 256color ]]" "
-	set -g default-terminal 'tmux-256color';
-	set -ga terminal-overrides ',tmux-256color:Tc' "
+set -g default-terminal 'tmux-256color'
+set -as terminal-overrides ',tmux-256color:Tc'
 
 # Enable mouse mode
 #   C-a m to toggle
