canonical git colorMoved and inputrc

--- a/main/.gitconfig
+++ b/main/.gitconfig
@@ -45,7 +45,7 @@
 # https://git-scm.com/docs/diff-config
 [diff]
 	# Make it easier to distinguish moved snippets of code within the same file.
-	colorMoved = zebra
+	colorMoved = default
 	# i/ = index, w/ = working copy, instead of default a/ and b/
 	mnemonicprefix = true
 	# Detect copies in addition to renames
