update ranger config

--- a/main/.config/ranger/rc.conf
+++ b/main/.config/ranger/rc.conf
@@ -1,23 +1,15 @@
-# Show hidden files? You can toggle this by typing 'zh'.
-setlocal path=~/.dotfiles show_hidden true
+# Delete selection / files.
+alias remove delete
 
-# Be aware of version control systems and display information.
+# Be aware of version control systems.
 set vcs_aware true
-
-# State of the four backends git, hg, bzr, svn. The possible states are
-# disabled, local (only show local info), enabled (show local and remote
-# information).
 set vcs_backend_git enabled
-set vcs_backend_hg enabled
 
 # Use one of the supported image preview protocols
 set preview_images true
 
 # Draw borders around columns? (separators, outline, both, or none)
-# Separators are vertical lines between columns.
-# Outline draws a box around all the columns.
-# Both combines the two.
-set draw_borders both
+set draw_borders separators
 
-# Delete selection / files.
-alias remove delete
+# Show hidden files? You can toggle this by typing 'zh'.
+setlocal path=~/.dotfiles show_hidden true
