simplify tmux and screen reloading:

--- a/main/.tmux.conf
+++ b/main/.tmux.conf
@@ -5,8 +5,7 @@
 #   -t -- tmux new -A -s main
 #
 # Reload tmux config:
-#   C-a r, or
-#   C-a R
+#   C-a r
 #
 # Plugin management:
 #   Install new plug-ins: C-a I
@@ -78,6 +77,10 @@ setw -g pane-base-index 1
 set -g default-terminal 'tmux-256color'
 set -as terminal-overrides ',tmux-256color:Tc'
 
+# https://github.com/tmux/tmux/wiki/FAQ#why-are-tmux-pane-separators-dashed-rather-than-continuous-lines
+# set -as terminal-overrides ",*:U8=0"
+# set-option -ga terminal-overrides ',*:enacs@:smacs@:rmacs@:acsc@'
+
 # Enable mouse mode
 #   C-a m to toggle
 set -g mouse on
@@ -123,7 +126,6 @@ bind K confirm kill-pane
 
 # Reload tmux config.
 bind r source ~/.tmux.conf \; display "Sourced .tmux.conf!"
-bind R source ~/.tmux.conf \; display "Sourced .tmux.conf!"
 
 # Change default start directory.
 bind _ attach -c '#{pane_current_path}' \; display "Start directory changed to #{pane_current_path}."
