--- a/main/.config/i3/config
+++ b/main/.config/i3/config
@@ -17,10 +17,7 @@ set $mod Mod1
 
 # Font for window titles. Will also be used by the bar unless a different font
 # is used in the bar {} block below.
-font pango:Monospace 9
-
-# Use Mouse+$mod to drag floating windows to their wanted position
-floating_modifier $mod
+font pango:Mono 9
 
 # start a terminal
 bindsym $mod+Return exec i3-sensible-terminal
@@ -69,6 +66,12 @@ bindsym $mod+f fullscreen toggle
 # change container layout (stacked, tabbed, toggle split)
 bindsym $mod+w layout toggle stacking tabbed
 bindsym $mod+e layout toggle split
+
+# set floating windows
+for_window [window_role="pop-up"] floating enable
+
+# use Mouse+$mod to drag floating windows to their wanted position
+floating_modifier $mod
 
 # toggle tiling / floating
 bindsym $mod+Shift+space floating toggle
