--- a/main/.config/i3/config
+++ b/main/.config/i3/config
@@ -68,7 +68,7 @@ bindsym $mod+w layout toggle stacking tabbed
 bindsym $mod+e layout toggle split
 
 # set floating windows
-for_window [window_role="pop-up"] floating enable
+for_window [window_role="About|bubble|pop-up|Preferences|task_dialog"] floating enable
 
 # use Mouse+$mod to drag floating windows to their wanted position
 floating_modifier $mod
