--- a/main/.tmux.conf
+++ b/main/.tmux.conf
@@ -57,7 +57,7 @@ unbind C-b
 # C-a a and C-a C-a both go to beginning of line.
 bind a send-prefix
 
-# Go to last window, like GNU Screen.
+# Go to last window.
 bind C-a last-window
 
 # Set vi mode keybindings. Mostly intended for copy mode.
@@ -121,8 +121,8 @@ bind j select-pane -D
 bind k select-pane -U
 bind l select-pane -R
 
-# Kill a pane a la GNU screen. Confirm before killing.
-bind K confirm kill-pane
+# Kill a pane. Confirm before killing.
+bind C-k confirm kill-pane
 
 # Reload tmux config.
 bind r source ~/.tmux.conf \; display "Sourced .tmux.conf!"
@@ -142,10 +142,10 @@ set -g status-left-length 40
 set -g status-right-length 65
 
 # Set status bar content.
-set -g status-left "#[fg=cyan]#H #[fg=colour239]• #[default]"
+set -g status-left "#[fg=cyan]#H #[fg=colour242]• #[default]"
 set -g status-right "#{prefix_highlight} #{?window_zoomed_flag,🔍 ,}#{?mouse,,#[dim]🖱️❌}#[default]"
 
-# Set window title style.
+# Set non-active window title style.
 set -g window-status-format "#I:#W"
 setw -g window-status-style fg=colour242,bg=default,dim
 
