--- a/screen/.screenrc
+++ b/screen/.screenrc
@@ -1,17 +1,16 @@
 # Config file for GNU screen(1).
+# Prefix is C-a.
 #
 # Reload screen config:
 #   C-a r
 #
 # List all keybindings:
 #   C-a ?
-#
-# Prefix is C-a.
 
 # don't display lengthy license and version information on startup
 startup_message off
 
-# automatically detach on terminal hangup (so that one can attach again and continue working)
+# automatically detach on terminal hangup, so that one can attach again and continue working
 autodetach on
 
 # ignore case on searches in copy-mode
@@ -23,11 +22,14 @@ defutf8 on
 # erase background with current bg color
 defbce on
 
-# fix residual text (vim, nano), enable alternative screen
-altscreen on
-
 # status
-hardstatus alwayslastline '%{= kG}%S: %{c}%{= kG}|%= %{= kw}%?%-Lw%?%{r}(%{W}%n*%f%t%?(%u)%?%{r})%{w}%?%+Lw%?%?%= %{g}'
+# https://www.kilobitspersecond.com/2014/02/10/understanding-gnu-screens-hardstatus-strings/
+hardstatus alwayslastline '%{= kw}%{+b c}%H%{-} • %{K}%-Lw%{-}%{+b}%n%f*%t%{-}%{K}%+Lw%{-}'
+
+# caption and split bars
+# https://superuser.com/questions/506080/screen-divider-border-width-and-color
+caption string "%{= dd}"
+rendition so = Kk
 
 # use bigger scrollback buffer
 defscrollback 50000
@@ -38,9 +40,6 @@ compacthist on
 
 # enable mouse (e.g. for split windows)
 mousetrack on
-
-# cyan background, black foreground
-rendition so = ck
 
 # split focus
 bind o focus next
@@ -53,7 +52,7 @@ bind "^K" kill
 # reload configuration file
 bind r source ~/.screenrc
 
-# disable C-a s, which freezes the screen otherwise it needs C-a q to unfreeze.
+# disable C-a s, which freezes the screen otherwise it needs C-a q to unfreeze
 bind s
 
 # disable prefix ^X which locks the screen, bind it to remove
@@ -61,13 +60,16 @@ bind ^X remove
 bind x remove
 
 # navigate regions with arrow keys
-bindkey "^A^[OA" focus up
-bindkey "^A^[OB" focus down
-bindkey "^A^[OD" focus left
-bindkey "^A^[OC" focus right
+bind "^A^[OD" focus left
+bind "^A^[OB" focus down
+bind "^A^[OA" focus up
+bind "^A^[OC" focus right
 
-# v5.0+: enable true (24-bit) colors instead of 256 colors (8-bit) if supported.
-truecolor on
+# navigate regions with vi keys
+bind h focus left
+bind j focus down
+bind k focus up
+bind l focus right
 
 # load corp configs if any
 source ~/.screenrc_corp
