git: use diff-highlight if it's available

--- a/main/.gitconfig
+++ b/main/.gitconfig
@@ -76,6 +76,12 @@
 	cmd = vim -c DiffConflicts \"$MERGED\" \"$BASE\" \"$LOCAL\" \"$REMOTE\"
 	trustExitCode = true
 
+[pager]
+	# diff-highlight isn't usually in $PATH, fail gracefully
+	diff = "(diff-highlight 2>/dev/null || cat) | ${PAGER:-less -RFX}"
+	log  = "(diff-highlight 2>/dev/null || cat) | ${PAGER:-less -RFX}"
+	show = "(diff-highlight 2>/dev/null || cat) | ${PAGER:-less -RFX}"
+
 [pull]
 	rebase = true
 
