--- a/main/.hgrc
+++ b/main/.hgrc
@@ -5,7 +5,7 @@ merge = vimdiff
 # https://github.com/whiteinge/diffconflicts
 [merge-tools]
 diffconflicts.executable=vim
-diffconflicts.args=-c 'let g:diffconflicts_vcs="hg"' -c DiffConflicts "$output" $base $local $other
+diffconflicts.args=-c 'let g:diffconflicts_vcs="hg"' -c DiffConflicts $output $base $local $other
 diffconflicts.premerge=keep
 diffconflicts.check=conflicts
 diffconflicts.priority=99
