add alacritty keybindings to docs

--- a/alacritty/.config/alacritty/alacritty.yml
+++ b/alacritty/.config/alacritty/alacritty.yml
@@ -1,4 +1,8 @@
-# Full config: https://github.com/alacritty/alacritty/blob/master/alacritty.yml
+# Default config: https://github.com/alacritty/alacritty/blob/master/alacritty.yml
+#
+# Hotkeys:
+#   <C-S-SPC>: vi mode (e.g. for scrollback)
+#   <C-S-u>: regex hints (e.g. URLs)
 
 env:
   TERM: xterm-256color
