minor updates for arch linux with xorg

--- a/i3/.config/i3/config
+++ b/i3/.config/i3/config
@@ -65,6 +65,7 @@ bindsym $mod+e layout toggle split
 
 # set floating windows
 for_window [window_role="About|bubble|pop-up|Preferences|task_dialog"] floating enable
+for_window [class="Blueman|Pavucontrol"] floating enable
 
 # use Mouse+$mod to drag floating windows to their wanted position
 floating_modifier $mod
