tmux: smoother scrolling

--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -63,6 +63,15 @@ bind C-a last-window
 # Set vi mode keybindings. Mostly intended for copy mode.
 set -g mode-keys vi
 
+# Smoother scrolling with mouse in copy mode.
+# https://stackoverflow.com/a/46617618/1745064
+bind-key -T copy-mode-vi WheelUpPane send-keys -X scroll-up
+bind-key -T copy-mode-vi WheelDownPane send-keys -X scroll-down
+
+# Half-page scrolling with mouse in copy mode.
+# bind-key -T copy-mode-vi WheelUpPane send-keys -X halfpage-up
+# bind-key -T copy-mode-vi WheelDownPane send-keys -X halfpage-down
+
 # Use v in addition to SPC to begin copy-mode selection.
 bind-key -T copy-mode-vi v send-keys -X begin-selection
 bind-key -T copy-mode-vi y send-keys -X copy-pipe-and-cancel
