--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -148,7 +148,7 @@ set -g status-right-length 65
 
 # Set status bar content.
 set -g status-left "#[fg=cyan]#H #[fg=colour242]• #[default]"
-set -g status-right "#{prefix_highlight} #{?window_zoomed_flag,🔍 ,}#{?mouse,,#[dim]🖱️❌}#[default]"
+set -g status-right "#{prefix_highlight} #{?window_zoomed_flag,🔍 ,}#{?mouse,,#[dim]🖱️:OFF}#[default]"
 
 # Set non-active window title style.
 set -g window-status-format "#I:#W"
