--- a/ssh/.ssh/config
+++ b/ssh/.ssh/config
@@ -9,14 +9,22 @@ Host *
 	# Requests compression of all data
 	Compression yes
 
-	# Reuse SSH connection to speed up remote login process using multiplexing
+	# Keep-alive. The default is 0, indicating that these messages will not be sent to the server.
+	ServerAliveInterval 300
+
+	# Always start tmux, forcing unicode, attaching to and/or creating a session named "main".
+	# Chrome hterm equivalent: SSH arguments:
+	#   -t -- tmux -u new -A -s main
+	# RequestTTY yes
+	# RemoteCommand tmux -u new -A -s main
+
+	# Keep this block last as it is not compatible with hterm in Chrome.
+	# Reuse SSH connection to speed up remote login process using multiplexing.
 	# https://en.wikibooks.org/wiki/OpenSSH/Cookbook/Multiplexing
 	ControlPath ~/.ssh/controlmasters/%C
 	ControlPersist yes
 	ControlMaster auto
 
-	# Keep-alive. The default is 0, indicating that these messages will not be sent to the server.
-	ServerAliveInterval 300
 
 # Load user scripts and functions if existing. Order is important.
 # Corp config is handled as part of .config.d.
